--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
     </main>
     <div class="circle1"></div>
     <div class="circle2"></div>
+    <script src="./index.js"></script>
+
+
 </body>
 </html>
