Made changes to createNotes page

--- a/Pages/createNotes/createNotes.html
+++ b/Pages/createNotes/createNotes.html
@@ -10,6 +10,12 @@
         <div class="create-notes-container">
             <div class="heading">Create Note</div>
             <input
+            maxlength="20"
+            type="text"
+            placeholder="Heading"
+            class="create-note-heading"
+        />
+            <input
                 maxlength="100"
                 type="text"
                 placeholder="Create Your Note"
